--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 24d555d
-	base = 58fcc5c
-	trim = 
-	trimbase = 
+	base = c3d7420
+	trim = orbbec_description
+	trimbase = 58fcc5c
