--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 24d555d
-	base = 438c371
-	trim = 
-	trimbase = 
+	base = eaf5476
+	trim = orbbec_camera_msgs
+	trimbase = 438c371
