--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 24d555d
-	base = d323de9
-	trim = 
-	trimbase = 
+	base = f938b20
+	trim = orbbec_camera
+	trimbase = d323de9
