--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/orbbec_camera
-	previous = 
-	base = f938b20
+	previous = f938b20
+	base = b0b97fb
 	trim = 
 	trimbase = 
