--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/orbbec_camera
-	previous = 
-	base = b3a99ec
+	previous = b3a99ec
+	base = 7d76c9b
 	trim = 
 	trimbase = 
