--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/orbbec_description
-	previous = 
-	base = c3d7420
+	previous = c3d7420
+	base = 9d83907
 	trim = 
 	trimbase = 
