--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/orbbec_description
-	previous = 
-	base = 28272ca
+	previous = 28272ca
+	base = e2ae53e
 	trim = 
 	trimbase = 
