--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/orbbec_camera_msgs
-	previous = 
-	base = a6038d3
+	previous = a6038d3
+	base = 48c4250
 	trim = 
 	trimbase = 
