--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/orbbec_description
-	previous = 
-	base = 1f6e5c7
+	previous = 1f6e5c7
+	base = a4f5673
 	trim = 
 	trimbase = 
