--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/orbbec_camera_msgs
-	previous = 
-	base = eaf5476
+	previous = eaf5476
+	base = eeb28c2
 	trim = 
 	trimbase = 
