--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/orbbec_camera_msgs
-	previous = 
-	base = fa0448a
+	previous = fa0448a
+	base = 8b3d434
 	trim = 
 	trimbase = 
