--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/orbbec_camera
-	previous = 
-	base = 9ec46bc
+	previous = 9ec46bc
+	base = 942a60c
 	trim = 
 	trimbase = 
