--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 24d555d
-	base = dea30e9
-	trim = 
-	trimbase = 
+	base = 77702a7
+	trim = orbbec_description
+	trimbase = dea30e9
