--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 24d555d
-	base = 33bec60
-	trim = 
-	trimbase = 
+	base = 21ae0ef
+	trim = orbbec_camera_msgs
+	trimbase = 33bec60
