--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 24d555d
-	base = d5090a7
-	trim = 
-	trimbase = 
+	base = 6de73f7
+	trim = orbbec_camera
+	trimbase = d5090a7
