--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/orbbec_camera
-	previous = 
-	base = 6de73f7
+	previous = 6de73f7
+	base = 62882eb
 	trim = 
 	trimbase = 
