--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/orbbec_camera
-	previous = 
-	base = df99437
+	previous = df99437
+	base = 778c0ce
 	trim = 
 	trimbase = 
