--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/orbbec_camera_msgs
-	previous = 
-	base = 21ae0ef
+	previous = 21ae0ef
+	base = 0e31a5b
 	trim = 
 	trimbase = 
