--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/orbbec_camera_msgs
-	previous = 
-	base = 5c5648f
+	previous = 5c5648f
+	base = 2e5053c
 	trim = 
 	trimbase = 
