--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/orbbec_description
-	previous = 
-	base = 77702a7
+	previous = 77702a7
+	base = e914f54
 	trim = 
 	trimbase = 
