--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/orbbec_description
-	previous = 
-	base = c48b5d7
+	previous = c48b5d7
+	base = d87fe50
 	trim = 
 	trimbase = 
