--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/orbbec_description
-	previous = 
-	base = 3462e8f
+	previous = 3462e8f
+	base = e90f856
 	trim = 
 	trimbase = 
