--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/orbbec_camera_msgs
-	previous = 
-	base = 764cfc4
+	previous = 764cfc4
+	base = 50759aa
 	trim = 
 	trimbase = 
