--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/orbbec_camera
-	previous = 
-	base = 48d9c3b
+	previous = 48d9c3b
+	base = 4e150d5
 	trim = 
 	trimbase = 
