--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/orbbec_description
-	previous = 
-	base = 0044dbe
+	previous = 0044dbe
+	base = 2b39262
 	trim = 
 	trimbase = 
