--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/orbbec_camera_msgs
-	previous = 
-	base = 440aa4f
+	previous = 440aa4f
+	base = 732a5eb
 	trim = 
 	trimbase = 
