--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/orbbec_camera
-	previous = 
-	base = 3dab059
+	previous = 3dab059
+	base = 7dc1b7c
 	trim = 
 	trimbase = 
