--- a/tracks.yaml
+++ b/tracks.yaml
@@ -42,9 +42,11 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
     devel_branch: v2-main
+    last_release: v2.5.4
+    last_version: 2.5.4
     name: orbbec_camera_v2
     patches: null
-    release_inc: 0
+    release_inc: '1'
     release_repo_url: git@github.com:orbbec/orbbec_camera_v2-release.git
     release_tag: v2.5.4
     ros_distro: jazzy
