--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 24d555d
-	base = 444d0bc
+	base = 2695494
 	trim = orbbec_description
-	trimbase = 
+	trimbase = 444d0bc
