--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 24d555d
-	base = f20a404
+	base = ba92f8a
 	trim = orbbec_camera_msgs
-	trimbase = 
+	trimbase = f20a404
