--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 24d555d
-	base = 48edd09
+	base = 221864d
 	trim = orbbec_camera
-	trimbase = 
+	trimbase = 48edd09
