--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 31f7b25
-	base = a0c875b
+	base = 84654a5
 	trim = orbbec_description
-	trimbase = 
+	trimbase = a0c875b
