--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 31f7b25
-	base = 99b66f8
+	base = 3bde42d
 	trim = orbbec_camera_msgs
-	trimbase = 
+	trimbase = 99b66f8
