--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 31f7b25
-	base = 9fcca25
+	base = e642c67
 	trim = orbbec_camera
-	trimbase = 
+	trimbase = 9fcca25
