--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.5.4-1": ["Mon Oct 27 2025", "toosimple", "jian.dong@pobox.com"]}
+{"2.5.5-2": ["Sat Nov 15 2025", "toosimple", "jian.dong@pobox.com"], "2.5.4-1": ["Mon Oct 27 2025", "toosimple", "jian.dong@pobox.com"]}
