--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 31f7b25
-	base = 5eb2eb1
+	base = 8831cdb
 	trim = orbbec_description
-	trimbase = 
+	trimbase = 5eb2eb1
