--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 31f7b25
-	base = 52c6ffe
+	base = 9537a67
 	trim = orbbec_camera_msgs
-	trimbase = 
+	trimbase = 52c6ffe
