--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 31f7b25
-	base = 59e14c8
+	base = 8a7b6c2
 	trim = orbbec_camera
-	trimbase = 
+	trimbase = 59e14c8
