Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.5.4-2": ["Wed Oct 29 2025", "Joe Dong", "mocun@orbbec.com"], "2.5.4-1": ["Mon Oct 27 2025", "Joe Dong", "mocun@orbbec.com"]}
+{"2.5.5-3": ["Sat Nov 15 2025", "Joe Dong", "mocun@orbbec.com"], "2.5.4-2": ["Wed Oct 29 2025", "Joe Dong", "mocun@orbbec.com"], "2.5.4-1": ["Mon Oct 27 2025", "Joe Dong", "mocun@orbbec.com"]}
